--- a/index-hu.html
+++ b/index-hu.html
@@ -9,16 +9,16 @@
 </head>
 <body>
   <div>
-    <p class="title">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
+    <p class="title">"Az emberiség szabadsága nem abban rejlik, hogy meg tudjuk csinálni, amit akarunk, hanem abban, hogy nem kell azt tennünk, amit nem akarunk."</p>
     <p class="name">– Jean-Jacques Rousseau</p>
-  </div>
+  </div>  
 <footer>  
-  <div class="lang1">
+  <div>
     <a href="index.html">
       <img src="assets/angol.png" alt="british flag" width="50" height="50">
     </a>
   </div>
-  <div class="lang2">
+  <div>
     <a href="index-hu.html">
       <img src="assets/magyar.png" alt="magyar zaszlo" width="50" height="50">
     </a>
